2007-11-26  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpwidgets-utils.c (gimp_widget_accel_changed):
	escape text before using it in Pango text markup.

2007-11-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/wmf.c	(load_image): improved error reporting.

2007-11-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/wmf.c: avoid filename encoding problems by not
	using wmf_file_open() but mapping the file into memory with
	GMappedFile. Fixes bug #499329.

2007-11-26  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpblobeditor.c (gimp_blob_editor_draw_blob):
	corrected rendering of the blob (bug #499281).

2007-11-24  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangleoptions.c
	(gimp_rectangle_options_iface_base_init): Fix indentation.

2007-11-24  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.[ch]: Renamed RECT_* identifiers of
	the GimpRectangleFunction enum to GIMP_RECTANGLE_TOOL_*.

	* app/tools/gimprectangleselecttool.c: Use the new names.

2007-11-24  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.[ch]: Ported the internal
	representation of the rectangle to gdouble:s instead of
	gint:s. This solves problems like not being able to swap portrait
	for landscape on very small rectangles and bug #442027, as well as
	provides a nice base to solve other similar problems when they are
	discovered. It is possible to choose what precision the
	GimpRectangleTool:s will appear to have externally through a new
	GimpRectanglePrecision enum and property, but the gdouble mode
	still requires some work in order to be useful. Internally the
	rectangle always is represented using gdouble:s of course. In the
	processes quite some refactoring has taken place, mostly
	restructuring code and splitting larger functions into smaller
	more managable ones.
	(gimp_rectangle_tool_rect_rubber_banding_func)
	(gimp_rectangle_tool_setup_snap_offsets)
	(gimp_rectangle_tool_apply_fixed_rule)