@@ -1,3 +1,8 @@
+2007-11-27  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* app/tools/gimprectangletool.c: initialize vars to quiet
+	stupid compile warnings.
+	
 2007-11-26  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpwidgets-utils.c (gimp_widget_accel_changed):
